--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -6,7 +6,8 @@ html
     link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css")
   body 
     include ../partials/header.pug
-    block main
+    div(class="ms-5")
+      block main
 
     include ../partials/footer.pug
 
