--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -4,7 +4,7 @@ include ../../mixins/search.pug
 include ../../mixins/pagination.pug
 include ../../mixins/changeMulti.pug
 include ../../mixins/alert.pug
-
+include ../../mixins/sort.pug
 
 block main
   +alert-suceess(5000)
@@ -26,24 +26,8 @@ block main
       .card-body 
         .row 
           .col-4 
-            div(sort)
-              select(
-                class="form-control"
-                name="sort"
-                sort-select
-              )
-                option(value="position-desc") Vị trí giảm dần
-                option(value="position-asc") Vị trí tăng dần
-                option(value="price-desc") Giá giảm dần
-                option(value="price-acs") Giá tăng dần
-                option(value="title-asc") Tiêu đề A-Z
-                option(value="title-desc") Tiêu đề Z-A
-
-              button(
-                class="btn btn-danger mt-2"
-                sort-clear
-              ) Clear
-
+            +sort()
+            
   .card.mb-1 
     .card-header Sản phẩm
       .card-body 
