--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -41,7 +41,7 @@ block main
             ) + Thêm mới
 
         table(
-          class="table table-hover table-sm" 
+          class="table table-hover table-sm mt-4" 
           checkbox-multi
         )  
           thead
