--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -7,6 +7,8 @@
           li.nav-item
             a.nav-link.active(href=`${prefixAdmin}/dashboard`) Tổng quan
           li.nav-item
+            a.nav-link(href=`${prefixAdmin}/products-category`) Danh mục sản phẩm
+          li.nav-item
             a.nav-link(href=`${prefixAdmin}/products`) Sản phẩm
           li.nav-item
             a.nav-link(href=`${prefixAdmin}/products/bin`) Thùng rác
