--- a/views/admin/pages/product-category/index.pug
+++ b/views/admin/pages/product-category/index.pug
@@ -14,11 +14,81 @@ block main
       .card-body 
         .row 
           .col-8
-            +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`)
+            +form-change-multi(`${prefixAdmin}/products-category/change-multi?_method=PATCH`)
           .col-4
             a(
               href=`${prefixAdmin}/products-category/create` 
               class="btn btn-outline-success"
             ) + Thêm mới
 
+        table(
+          class="table table-hover table-sm mt-4" 
+          checkbox-multi
+        )  
+          thead
+            tr  
+              th 
+                input(type="checkbox" name="checkall")
+              th STT 
+              th Hình ảnh 
+              th Tiêu đề
+              th Giá
+              th Vị trí
+              th Trạng thái
+              th Hành động
           
+          tbody 
+            each item, index in records
+              tr(class="tr") 
+                td 
+                  input(
+                    type="checkbox"
+                    name="id"
+                    value=item.id
+                  )
+                td #{index+1}
+                td 
+                  img(
+                    src = item.thumbnail
+                    alt=item.title
+                    width="100px"
+                    height="100px"
+                    style="object-fit: cover"
+                  )
+                td #{item.title}
+                td #{item.price}
+                td 
+                  input(
+                    type="number"
+                    value=item.position
+                    style="width: 60px"
+                    min=1
+                    name="position"
+                  )
+                td
+                  if(item.status == "active")
+                    a(href="javascript:;"
+                    data-status=item.status
+                    data-id=item.id
+                    button-change-status
+                     class="badge bg-success") Hoạt động
+                  else 
+                    a(href="javascript:;"
+                    data-status=item.status
+                    data-id=item.id
+                    button-change-status 
+                    class="badge bg-warning") Dừng hoạt động
+                td 
+                  a(
+                      href=`${prefixAdmin}/products-category/detail/${item.id}`
+                      class="btn btn-secondary btn-sm"
+                      ) Chi tiết
+                  a(
+                    href=`${prefixAdmin}/products-category/edit/${item.id}`
+                    class="btn btn-warning btn-sm"
+                    ) Sửa 
+                  button(
+                    class="btn btn-danger btn-sm ms-1" 
+                    button-delete 
+                    data-id=item.id
+                  ) Xóa
