--- a/views/admin/pages/product-category/edit.pug
+++ b/views/admin/pages/product-category/edit.pug
@@ -3,7 +3,7 @@ include ../../mixins/alert.pug
 
 block main
   +alert-error(5000)
-  h1(class="mb-4") Thêm mới danh mục sản phẩm
+  h1(class="mb-4") Chỉnh sửa danh mục sản phẩm
 
   form(
     action=`${prefixAdmin}/products-category/create`
