--- a/views/admin/pages/product-category/index.pug
+++ b/views/admin/pages/product-category/index.pug
@@ -7,6 +7,8 @@ include ../../mixins/alert.pug
 include ../../mixins/sort.pug
 
 block main
+  +alert-suceess(5000)
+
   h1(class="test") Danh mục sản phẩm
 
   .card.mb-1 
