--- a/views/admin/pages/product-category/edit.pug
+++ b/views/admin/pages/product-category/edit.pug
@@ -1,5 +1,6 @@
 extend ../../layouts/default.pug
 include ../../mixins/alert.pug
+include ../../mixins/select-tree.pug
 
 block main
   +alert-error(5000)
@@ -23,13 +24,14 @@ block main
     
     div(class="form-group")
       label(for="parent_id") Danh mục cha
-      input(
-        type="text"
-        class="form-control"
-        id="parent_id"
-        value=data.parent_id
+      select(
         name="parent_id"
-      )
+        id="parent_id"
+        class="form-control"
+      ) 
+        option(value="") -- Chọn danh mục cha --
+          if(records)
+            +select-tree(records)
     
     div(class="form-group")
       label(for="desc") Mô tả
