--- a/views/admin/mixins/select-tree.pug
+++ b/views/admin/mixins/select-tree.pug
@@ -1,6 +1,6 @@
 mixin select-tree(items, level = 1)
   each item in items 
     - const prefix = Array(level + 1).join("-- ")
-    option(value=item.id) #{prefix}#{item.title}
+    option(value=item.id) 
       if item.children && item.children.length > 0
         +select-tree(item.children, level + 1)
