--- a/views/admin/pages/product-category/edit.pug
+++ b/views/admin/pages/product-category/edit.pug
@@ -1,4 +1,4 @@
-include ../../layouts/default.pug
+extend ../../layouts/default.pug
 include ../../mixins/alert.pug
 include ../../mixins/select-tree.pug
 
