--- a/views/admin/pages/product-category/index.pug
+++ b/views/admin/pages/product-category/index.pug
@@ -5,6 +5,7 @@ include ../../mixins/pagination.pug
 include ../../mixins/changeMulti.pug
 include ../../mixins/alert.pug
 include ../../mixins/sort.pug
+include ../../mixins/table-tree.pug
 
 block main
   +alert-suceess(5000)
@@ -40,57 +41,5 @@ block main
               th Hành động
           
           tbody 
-            each item, index in records
-              tr(class="tr") 
-                td 
-                  input(
-                    type="checkbox"
-                    name="id"
-                    value=item.id
-                  )
-                td #{index+1}
-                td 
-                  img(
-                    src = item.thumbnail
-                    alt=item.title
-                    width="100px"
-                    height="100px"
-                    style="object-fit: cover"
-                  )
-                td #{item.title}
-                td #{item.price}
-                td 
-                  input(
-                    type="number"
-                    value=item.position
-                    style="width: 60px"
-                    min=1
-                    name="position"
-                  )
-                td
-                  if(item.status == "active")
-                    a(href="javascript:;"
-                    data-status=item.status
-                    data-id=item.id
-                    button-change-status
-                     class="badge bg-success") Hoạt động
-                  else 
-                    a(href="javascript:;"
-                    data-status=item.status
-                    data-id=item.id
-                    button-change-status 
-                    class="badge bg-warning") Dừng hoạt động
-                td 
-                  a(
-                      href=`${prefixAdmin}/products-category/detail/${item.id}`
-                      class="btn btn-secondary btn-sm"
-                      ) Chi tiết
-                  a(
-                    href=`${prefixAdmin}/products-category/edit/${item.id}`
-                    class="btn btn-warning btn-sm"
-                    ) Sửa 
-                  button(
-                    class="btn btn-danger btn-sm ms-1" 
-                    button-delete 
-                    data-id=item.id
-                  ) Xóa
+            +table-tree(records)
+            
