--- a/views/admin/pages/product-category/edit.pug
+++ b/views/admin/pages/product-category/edit.pug
@@ -23,10 +23,10 @@ block main
       )
     
     div(class="form-group")
-      label(for="parent_id") Danh mục cha
+      label(for="parent_idEdit") Danh mục cha
       select(
-        name="parent_id"
-        id="parent_id"
+        name=data.title
+        id="parent_idEdit"
         class="form-control"
       ) 
         option(value="") -- Chọn danh mục cha --
