--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -65,7 +65,7 @@ block main
                     name="id"
                     value=item.id
                   )
-                td #{index+1}
+                td #{pagination.limitItems*}
                 td 
                   img(
                     src = item.thumbnail
