--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -65,7 +65,7 @@ block main
                     name="id"
                     value=item.id
                   )
-                td #{pagination.limitItems*}
+                td #{pagination.limitItem*(pagination.currentPage - 1) + index + 1}
                 td 
                   img(
                     src = item.thumbnail
