--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -72,6 +72,7 @@ block main
                     alt=item.title
                     width="100px"
                     height="100px"
+                    style="object-fit: cover"
                   )
                 td #{item.title}
                 td #{item.price}
