--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -1,5 +1,6 @@
 extend ../../layouts/default.pug
 include ../../mixins/alert.pug
+include ../../mixins/select-tree.pug
 
 block main
   +alert-error(5000)
@@ -22,15 +23,15 @@ block main
       )
     
     div(class="form-group")
-    label(for="") Danh mục
+    label(for="product_category_id") Danh mục
     select(
-      name=data.title
-      id=""
+      name="product_category_id"
+      id="product_category_id"
       class="form-control"
     ) 
       option(value="") -- Chọn danh mục --
-        if(records)
-          +select-tree(records)
+        if(category)
+          +select-tree(category)
     
     
     div(class="form-group")
