update edit product

--- a/views/admin/pages/products/edit.pug
+++ b/views/admin/pages/products/edit.pug
@@ -26,7 +26,7 @@ block main
     div(class="form-group")
     label(for="product_category_id") Danh mục
     select(
-      name=product.product_category_id
+      name=categoryName.title
       id="product_category_id"
       class="form-control"
     ) 
