--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -12,3 +12,5 @@
             a.nav-link(href=`${prefixAdmin}/products`) Sản phẩm
           li.nav-item
             a.nav-link(href=`${prefixAdmin}/products/bin`) Thùng rác
+          li.nav-item
+            a.nav-link(href=`${prefixAdmin}/products/roles`) Nhóm quyền
