--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -13,4 +13,4 @@
           li.nav-item
             a.nav-link(href=`${prefixAdmin}/products/bin`) Thùng rác
           li.nav-item
-            a.nav-link(href=`${prefixAdmin}/products/roles`) Nhóm quyền
+            a.nav-link(href=`${prefixAdmin}/roles`) Nhóm quyền
