--- a/views/admin/pages/role/index.pug
+++ b/views/admin/pages/role/index.pug
@@ -8,10 +8,10 @@ include ../../mixins/sort.pug
 
 block main
   +alert-suceess(5000)
-   h1(class="test") Danh mục sản phẩm
+   h1(class="test") Nhóm quyền
 
   .card.mb-1 
-    .card-header Danh mục
+    .card-header Danh sách
       .card-body 
         .row 
           .col-8
