--- a/views/admin/pages/role/index.pug
+++ b/views/admin/pages/role/index.pug
@@ -15,9 +15,8 @@ block main
       .card-body 
         .row 
           .col-8
-            +form-change-multi(`${prefixAdmin}/products-category/change-multi?_method=PATCH`)
           .col-4
             a(
-              href=`${prefixAdmin}/products-category/create` 
+              href=`${prefixAdmin}/roles/create` 
               class="btn btn-outline-success"
             ) + Thêm mới
