--- a/views/admin/pages/role/index.pug
+++ b/views/admin/pages/role/index.pug
@@ -8,9 +8,10 @@ include ../../mixins/sort.pug
 
 block main
   +alert-suceess(5000)
-   h1(class="test") Nhóm quyền
+  
+  h1(class="mb-4") Nhóm quyền
 
-  .card.mb-1 
+  .card.mb-3 
     .card-header Danh sách
       .card-body 
         .row 
