--- a/views/admin/pages/role/create.pug
+++ b/views/admin/pages/role/create.pug
@@ -18,3 +18,12 @@ block main
     method="POST"
   )
 
+    div(class="form-group")
+        label(for="title") Tiêu đề
+        input(
+          type="text"
+          class="form-control"
+          id="title"
+          name="title"
+        )
+
