--- a/views/admin/pages/role/create.pug
+++ b/views/admin/pages/role/create.pug
@@ -26,4 +26,13 @@ block main
           id="title"
           name="title"
         )
+    
+    div(class="form-group")
+      label(for="desc") Mô tả
+      textarea(
+        class="form-control textarea-mce"
+        id="desc"
+        name="description"
+        rows="5"
+      )
 
