--- a/views/admin/pages/role/create.pug
+++ b/views/admin/pages/role/create.pug
@@ -19,13 +19,14 @@ block main
   )
 
     div(class="form-group")
-        label(for="title") Tiêu đề
-        input(
-          type="text"
-          class="form-control"
-          id="title"
-          name="title"
-        )
+      label(for="title") Tiêu đề
+      input(
+        type="text"
+        class="form-control"
+        id="title"
+        name="title"
+        required
+      )
     
     div(class="form-group")
       label(for="desc") Mô tả
