--- a/views/admin/pages/role/create.pug
+++ b/views/admin/pages/role/create.pug
@@ -30,7 +30,8 @@ block main
     
     div(class="form-group")
       label(for="desc") Mô tả
-      textarea(
+      input(
+        type="text"
         class="form-control textarea-mce"
         id="desc"
         name="description"
