--- a/views/admin/pages/role/create.pug
+++ b/views/admin/pages/role/create.pug
@@ -34,5 +34,6 @@ block main
         type="text"
         class="form-control textarea-mce"
         id="desc"
+        name="description"
       )
 
