--- a/views/admin/pages/role/create.pug
+++ b/views/admin/pages/role/create.pug
@@ -31,7 +31,7 @@ block main
     div(class="form-group")
       label(for="desc") Mô tả
       input(
-        type="text"
+        class="form-control textarea-mce"
         id="desc"
         name="description"
       )
