--- a/views/admin/pages/role/create.pug
+++ b/views/admin/pages/role/create.pug
@@ -29,6 +29,7 @@ block main
       )
     
     div(class="form-group")
+      label(for="desc") Mô tả
       input(
         type="text"
         class="form-control textarea-mce"
