update role group

--- a/views/admin/pages/role/create.pug
+++ b/views/admin/pages/role/create.pug
@@ -9,7 +9,7 @@ include ../../mixins/sort.pug
 block main
   +alert-suceess(5000)
   
-  h1(class="mb-4") Tạo mới
+  h1(class="mb-4") Thêm nhóm quyền mới
 
   form(
     action=`${prefixAdmin}/roles/create`
