update role group

--- a/views/admin/pages/role/create.pug
+++ b/views/admin/pages/role/create.pug
@@ -36,4 +36,10 @@ block main
         id="desc"
         name="description"
       )
+    
+    div(class="form-group")
+      button(
+        type="submit"
+        class="btn btn-primary"
+      ) Tạo mới
 
