--- a/views/admin/pages/role/create.pug
+++ b/views/admin/pages/role/create.pug
@@ -40,6 +40,6 @@ block main
     div(class="form-group")
       button(
         type="submit"
-        class="btn btn-primary"
+        class="btn btn-primary mt-3"
       ) Tạo mới
 
