--- a/views/admin/pages/role/index.pug
+++ b/views/admin/pages/role/index.pug
@@ -35,57 +35,36 @@ block main
               th Mô tả 
 
           tbody 
-            each item, index in products
-              tr(class="tr") 
-                td 
-                  input(
-                    type="checkbox"
-                    name="id"
-                    value=item.id
-                  )
-                td #{pagination.limitItem*(pagination.currentPage - 1) + index + 1}
-                td 
-                  img(
-                    src = item.thumbnail
-                    alt=item.title
-                    width="100px"
-                    height="100px"
-                    style="object-fit: cover"
-                  )
-                td #{item.title}
-                td #{item.price}
-                td 
-                  input(
-                    type="number"
-                    value=item.position
-                    style="width: 60px"
-                    min=1
-                    name="position"
-                  )
-                td
-                  if(item.status == "active")
-                    a(href="javascript:;"
-                    data-status=item.status
-                    data-id=item.id
-                    button-change-status
-                     class="badge bg-success") Hoạt động
-                  else 
-                    a(href="javascript:;"
-                    data-status=item.status
-                    data-id=item.id
-                    button-change-status 
-                    class="badge bg-warning") Dừng hoạt động
-                td 
-                  a(
-                      href=`${prefixAdmin}/products/detail/${item.id}`
-                      class="btn btn-secondary btn-sm"
-                      ) Chi tiết
-                  a(
-                    href=`${prefixAdmin}/products/edit/${item.id}`
-                    class="btn btn-warning btn-sm"
-                    ) Sửa 
-                  button(
-                    class="btn btn-danger btn-sm ms-1" 
-                    button-delete 
-                    data-id=item.id
-                  ) Xóa
+            if(records.length > 0)
+              each item, index in products
+                tr(class="tr") 
+                  td #{index+1} 
+                  td #{item.title}
+                  td #{item.description}
+                  td
+                    if(item.status == "active")
+                      a(href="javascript:;"
+                      data-status=item.status
+                      data-id=item.id
+                      button-change-status
+                      class="badge bg-success") Hoạt động
+                    else 
+                      a(href="javascript:;"
+                      data-status=item.status
+                      data-id=item.id
+                      button-change-status 
+                      class="badge bg-warning") Dừng hoạt động
+                  td 
+                    a(
+                        href=`${prefixAdmin}/products/detail/${item.id}`
+                        class="btn btn-secondary btn-sm"
+                        ) Chi tiết
+                    a(
+                      href=`${prefixAdmin}/products/edit/${item.id}`
+                      class="btn btn-warning btn-sm"
+                      ) Sửa 
+                    button(
+                      class="btn btn-danger btn-sm ms-1" 
+                      button-delete 
+                      data-id=item.id
+                    ) Xóa
