update role group

--- a/views/admin/pages/role/index.pug
+++ b/views/admin/pages/role/index.pug
@@ -36,7 +36,7 @@ block main
 
           tbody 
             if(records.length > 0)
-              each item, index in products
+              each item, index in records
                 tr(class="tr") 
                   td #{index+1} 
                   td #{item.title}
