update role group

--- a/views/admin/pages/role/index.pug
+++ b/views/admin/pages/role/index.pug
@@ -28,11 +28,11 @@ block main
         )  
           thead
             tr  
-              th 
-                input(type="checkbox" name="checkall")
               th STT 
               th Nhóm quyền
               th Mô tả 
+              th Trạng thái
+              th Hành động
 
           tbody 
             if(records.length > 0)
