update role group

--- a/views/admin/pages/role/index.pug
+++ b/views/admin/pages/role/index.pug
@@ -56,7 +56,7 @@ block main
                       class="badge bg-warning") Dừng hoạt động
                   td 
                     a(
-                        href=`${prefixAdmin}/products/detail/${item.id}`
+                        href=`${prefixAdmin}/roles/detail/${item.id}`
                         class="btn btn-secondary btn-sm"
                         ) Chi tiết
                     a(
