add permissions user

--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -14,3 +14,5 @@
             a.nav-link(href=`${prefixAdmin}/products/bin`) Thùng rác
           li.nav-item
             a.nav-link(href=`${prefixAdmin}/roles`) Nhóm quyền
+          li.nav-item
+            a.nav-link(href=`${prefixAdmin}/roles/permissions`) Phân quyền
