--- a/views/admin/pages/role/permission.pug
+++ b/views/admin/pages/role/permission.pug
@@ -4,3 +4,10 @@ block main
   +alert-suceess(5000)
   
   h1(class="mb-4") Phân quyền
+
+  div(class="text-right")
+    button(
+      type="submit"
+      class="btn btn-primary mb-3"
+      button-submit
+    ) Cập nhật
