--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -12,3 +12,12 @@ block main
       class="btn btn-primary mb-3"
       button-submit
     ) Cập nhật
+  
+  table(
+    class="table table-hover table-sm"
+  )
+    thead 
+      tr  
+        th Tính năng 
+        th(class="text-center") Quản trị viên
+        th(class="text-center") Quản lý nội dung
