--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -6,49 +6,50 @@ block main
   
   h1(class="mb-4") Phân quyền
 
-  div(class="text-right")
-    button(
-      type="submit"
-      class="btn btn-primary mb-3"
-      button-submit
-    ) Cập nhật
-  
-  table(
-    class="table table-hover table-sm"
-  )
-    thead 
-      tr  
-        th Tính năng 
-        th(class="text-center") Quản trị viên
-        th(class="text-center") Quản lý nội dung
-    tbody 
-      tr 
-        td(colspan="4")
-          b Danh mục sản phẩm 
-      tr(data-name="products-category_view")
-        td Xem 
-        td(class="text-center")
-          input(type="checkbox")
-        td(class="text-center")
-          input(type="checkbox")
-      tr(data-name="products-category_create")
-        td Thêm mới
-        td(class="text-center")
-          input(type="checkbox")
-        td(class="text-center")
-          input(type="checkbox")
-      tr(data-name="products-category_edit")
-        td Chỉnh sửa
-        td(class="text-center")
-          input(type="checkbox")
-        td(class="text-center")
-          input(type="checkbox")
-      tr(data-name="products-category_delete")
-        td Xóa
-        td(class="text-center")
-          input(type="checkbox")
-        td(class="text-center")
-          input(type="checkbox")
+  if(records)
+    div(class="text-right")
+      button(
+        type="submit"
+        class="btn btn-primary mb-3"
+        button-submit
+      ) Cập nhật
+    
+    table(
+      class="table table-hover table-sm"
+    )
+      thead 
+        tr  
+          th Tính năng 
+          th(class="text-center") Quản trị viên
+          th(class="text-center") Quản lý nội dung
+      tbody 
+        tr 
+          td(colspan="4")
+            b Danh mục sản phẩm 
+        tr(data-name="products-category_view")
+          td Xem 
+          td(class="text-center")
+            input(type="checkbox")
+          td(class="text-center")
+            input(type="checkbox")
+        tr(data-name="products-category_create")
+          td Thêm mới
+          td(class="text-center")
+            input(type="checkbox")
+          td(class="text-center")
+            input(type="checkbox")
+        tr(data-name="products-category_edit")
+          td Chỉnh sửa
+          td(class="text-center")
+            input(type="checkbox")
+          td(class="text-center")
+            input(type="checkbox")
+        tr(data-name="products-category_delete")
+          td Xóa
+          td(class="text-center")
+            input(type="checkbox")
+          td(class="text-center")
+            input(type="checkbox")
 
 
 
