--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -20,8 +20,8 @@ block main
       thead 
         tr  
           th Tính năng 
-          th(class="text-center") Quản trị viên
-          th(class="text-center") Quản lý nội dung
+          each item in records
+            th(class="text-center") #{item.title}
       tbody 
         tr 
           td(colspan="4")
