--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -33,28 +33,24 @@ block main
             b Danh mục sản phẩm 
         tr(data-name="products-category_view")
           td Xem 
-          td(class="text-center")
-            input(type="checkbox")
-          td(class="text-center")
-            input(type="checkbox")
+          each item in records
+            td(class="text-center")
+              input(type="checkbox")
         tr(data-name="products-category_create")
           td Thêm mới
-          td(class="text-center")
-            input(type="checkbox")
-          td(class="text-center")
-            input(type="checkbox")
+          each item in records
+            td(class="text-center")
+              input(type="checkbox")
         tr(data-name="products-category_edit")
           td Chỉnh sửa
-          td(class="text-center")
-            input(type="checkbox")
-          td(class="text-center")
-            input(type="checkbox")
+          each item in records
+            td(class="text-center")
+              input(type="checkbox")
         tr(data-name="products-category_delete")
           td Xóa
-          td(class="text-center")
-            input(type="checkbox")
-          td(class="text-center")
-            input(type="checkbox")
+          each item in records
+            td(class="text-center")
+              input(type="checkbox")
 
 
 
