--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -50,6 +50,7 @@ block main
           td Xóa
           each item in records
             td(class="text-center")
+              input(type="checkbox")
 
 
 
