--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -49,6 +49,7 @@ block main
         tr(data-name="products-category_delete")
           td Xóa
           each item in records
+            td(class="text-center")
               input(type="checkbox")
 
 
