--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -47,6 +47,7 @@ block main
             td(class="text-center")
               input(type="checkbox")
         tr(data-name="products-category_delete")
+          td Xóa
           each item in records
             td(class="text-center")
               input(type="checkbox")
