--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -23,7 +23,7 @@ block main
           each item in records
             th(class="text-center") #{item.title}
       tbody 
-        tr(data-name="id")
+        tr(data-name="id" class="d-none")
           td 
           each item in records 
             td(class="text-center")
