--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -52,6 +52,10 @@ block main
             td(class="text-center")
               input(type="checkbox")
 
+  form(
+    id="form-change-permissions"
+    method="post"
+  )
 
 
 
