--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -55,6 +55,7 @@ block main
   form(
     id="form-change-permissions"
     method="post"
+    action=`${prefixAdmin}/roles/permissions?_method=PATCH`
   )
 
 
