--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -57,7 +57,8 @@ block main
     method="post"
     action=`${prefixAdmin}/roles/permissions?_method=PATCH`
   )
-
+    div(class="form-group")
+      input
 
 
 
