--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -58,7 +58,13 @@ block main
     action=`${prefixAdmin}/roles/permissions?_method=PATCH`
   )
     div(class="form-group")
-      input
+      input(
+        type="text"
+        class="form-control"
+        name="permissions"
+      )
+  
+script(src="/admin/js/roles.js")
 
 
 
