--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -7,6 +7,7 @@ block main
   h1(class="mb-4") Phân quyền
 
   if(records)
+    div(data-records = records)
     div(class="text-right")
       button(
         type="submit"
