--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -58,6 +58,7 @@ block main
     id="form-change-permissions"
     method="post"
     action=`${prefixAdmin}/roles/permissions?_method=PATCH`
+    class="d-none"
   )
     div(class="form-group")
       input(
