--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -64,6 +64,7 @@ block main
       input(
         type="text"
         class="form-control"
+        name="permissions"
       )
   
   script(src="/admin/js/roles.js")
