--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -57,6 +57,7 @@ block main
   form(
     id="form-change-permissions"
     method="post"
+    action=`${prefixAdmin}/roles/permissions?_method=PATCH`
     class="d-none"
   )
     div(class="form-group")
