--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -11,6 +11,7 @@ block main
     div(class="text-right")
       button(
         type="submit"
+        class="btn btn-primary mb-3"
         button-submit
       ) Cập nhật
     
