--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -12,6 +12,7 @@ block main
       button(
         type="submit"
         class="btn btn-primary mb-3"
+        button-submit
       ) Cập nhật
     
     table(
