--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -4,6 +4,7 @@ include ../../mixins/alert.pug
 block main
   +alert-suceess(5000)
   
+  h1(class="mb-4") Phân quyền
 
   if(records)
     div(data-records = records)
