--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -16,6 +16,7 @@ block main
       ) Cập nhật
     
     table(
+      class="table table-hover table-sm"
       table-permissions
     )
       thead 
