--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -10,7 +10,6 @@ block main
     div(data-records = records)
     div(class="text-right")
       button(
-        type="submit"
         class="btn btn-primary mb-3"
         button-submit
       ) Cập nhật
@@ -25,6 +24,7 @@ block main
           each item in records
             th(class="text-center") #{item.title}
       tbody 
+        tr(data-name="id" class="d-none")
           td 
           each item in records 
             td(class="text-center")
