--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -10,6 +10,7 @@ block main
     div(data-records = records)
     div(class="text-right")
       button(
+        type="submit"
         class="btn btn-primary mb-3"
         button-submit
       ) Cập nhật
