--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -21,6 +21,7 @@ block main
     )
       thead 
         tr  
+          th Tính năng 
           each item in records
             th(class="text-center") #{item.title}
       tbody 
