--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -53,6 +53,30 @@ block main
           each item in records
             td(class="text-center")
               input(type="checkbox")
+        
+        tr 
+          td(colspan="4")
+            b Sản phẩm
+        tr(data-name="products-category_view")
+          td Xem 
+          each item in records
+            td(class="text-center")
+              input(type="checkbox")
+        tr(data-name="products-category_create")
+          td Thêm mới
+          each item in records
+            td(class="text-center")
+              input(type="checkbox")
+        tr(data-name="products-category_edit")
+          td Chỉnh sửa
+          each item in records
+            td(class="text-center")
+              input(type="checkbox")
+        tr(data-name="products-category_delete")
+          td Xóa
+          each item in records
+            td(class="text-center")
+              input(type="checkbox")
 
   form(
     id="form-change-permissions"
