--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -57,22 +57,22 @@ block main
         tr 
           td(colspan="4")
             b Sản phẩm
-        tr(data-name="products-category_view")
+        tr(data-name="products_view")
           td Xem 
           each item in records
             td(class="text-center")
               input(type="checkbox")
-        tr(data-name="products-category_create")
+        tr(data-name="products_create")
           td Thêm mới
           each item in records
             td(class="text-center")
               input(type="checkbox")
-        tr(data-name="products-category_edit")
+        tr(data-name="products_edit")
           td Chỉnh sửa
           each item in records
             td(class="text-center")
               input(type="checkbox")
-        tr(data-name="products-category_delete")
+        tr(data-name="products_delete")
           td Xóa
           each item in records
             td(class="text-center")
