--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -77,7 +77,35 @@ block main
           each item in records
             td(class="text-center")
               input(type="checkbox")
-
+        
+        tr 
+          td(colspan="4")
+            b Nhóm quyền
+        tr(data-name="roles_view")
+          td Xem 
+          each item in records
+            td(class="text-center")
+              input(type="checkbox")
+        tr(data-name="roles_create")
+          td Thêm mới
+          each item in records
+            td(class="text-center")
+              input(type="checkbox")
+        tr(data-name="roles_edit")
+          td Chỉnh sửa
+          each item in records
+            td(class="text-center")
+              input(type="checkbox")
+        tr(data-name="roles_delete")
+          td Xóa
+          each item in records
+            td(class="text-center")
+              input(type="checkbox")
+        tr(data-name="roles_permissions")
+          td Phân quyền
+          each item in records
+            td(class="text-center")
+              input(type="checkbox")
   form(
     id="form-change-permissions"
     method="post"
