add file account.model.js

--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -16,3 +16,5 @@
             a.nav-link(href=`${prefixAdmin}/roles`) Nhóm quyền
           li.nav-item
             a.nav-link(href=`${prefixAdmin}/roles/permissions`) Phân quyền
+          li.nav-item
+            a.nav-link(href=`${prefixAdmin}/accounts`) Danh sách tài khoản
