--- a/views/admin/pages/accounts/create.pug
+++ b/views/admin/pages/accounts/create.pug
@@ -67,9 +67,9 @@ block main
       
     div(class="form-group")
       label(for="role_id") Phân quyền 
-      select(for="role_id" id="role_id" class="form-control")
+      select(for="role_id" id="role_id" name="role_id" class="form-control")
         option(disabled) -- Chọn --
-        option(value="")
+        option(value="") Quản trị viên
     div(class="form-group form-check form-check-inline")
       input(
         type="radio"
