--- a/views/admin/pages/accounts/create.pug
+++ b/views/admin/pages/accounts/create.pug
@@ -73,6 +73,7 @@ block main
     div(class="form-group form-check form-check-inline")
       input(
         type="radio"
+        class="form-check-input"
         id="statusActive"
         name="status"
         value="active"
