--- a/views/admin/pages/accounts/create.pug
+++ b/views/admin/pages/accounts/create.pug
@@ -60,6 +60,7 @@ block main
         upload-image-input
       )
       img(
+        src=""
         class="image-preview"
         upload-image-preview
       )
