--- a/views/admin/pages/accounts/create.pug
+++ b/views/admin/pages/accounts/create.pug
@@ -69,7 +69,8 @@ block main
       label(for="role_id") Phân quyền 
       select(for="role_id" id="role_id" name="role_id" class="form-control")
         option(disabled) -- Chọn --
-        option(value="") Quản trị viên
+        each item in roles
+          option(value=item.id) #{item.title}
     div(class="form-group form-check form-check-inline")
       input(
         type="radio"
