--- a/views/admin/pages/accounts/index.pug
+++ b/views/admin/pages/accounts/index.pug
@@ -1,4 +1,5 @@
 extends ../../layouts/default.pug
+include ../../mixins/pagination.pug
 
 block main
   h1(class="test") Danh sách tài khoản
@@ -13,3 +14,77 @@ block main
               href=`${prefixAdmin}/accounts/create` 
               class="btn btn-outline-success"
             ) + Thêm mới
+        
+        table(
+          class="table table-hover table-sm mt-4" 
+          checkbox-multi
+        )  
+          thead
+            tr  
+              th 
+                input(type="checkbox" name="checkall")
+              th STT 
+              th Avatar
+              th Họ tên
+              th Phân quyền
+              th Email
+              th Trạng thái
+              th Hành động
+          
+          tbody 
+            each item, index in records
+              tr(class="tr") 
+                td 
+                  input(
+                    type="checkbox"
+                    name="id"
+                    value=item.id
+                  )
+                //- td #{pagination.limitItem*(pagination.currentPage - 1) + index + 1}
+                td 
+                  img(
+                    src = item.thumbnail
+                    alt=item.title
+                    width="100px"
+                    height="100px"
+                    style="object-fit: cover"
+                  )
+                td #{item.title}
+                td #{item.price}
+                td 
+                  input(
+                    type="number"
+                    value=item.position
+                    style="width: 60px"
+                    min=1
+                    name="position"
+                  )
+                td
+                  if(item.status == "active")
+                    a(href="javascript:;"
+                    data-status=item.status
+                    data-id=item.id
+                    button-change-status
+                     class="badge bg-success") Hoạt động
+                  else 
+                    a(href="javascript:;"
+                    data-status=item.status
+                    data-id=item.id
+                    button-change-status 
+                    class="badge bg-warning") Dừng hoạt động
+                td 
+                  a(
+                      href=`${prefixAdmin}/products/detail/${item.id}`
+                      class="btn btn-secondary btn-sm"
+                      ) Chi tiết
+                  a(
+                    href=`${prefixAdmin}/products/edit/${item.id}`
+                    class="btn btn-warning btn-sm"
+                    ) Sửa 
+                  button(
+                    class="btn btn-danger btn-sm ms-1" 
+                    button-delete 
+                    data-id=item.id
+                  ) Xóa
+  
+  //- +pagination()
