--- a/views/admin/pages/accounts/index.pug
+++ b/views/admin/pages/accounts/index.pug
@@ -40,7 +40,7 @@ block main
                     name="id"
                     value=item.id
                   )
-                //- td #{pagination.limitItem*(pagination.currentPage - 1) + index + 1}
+                td #{pagination.limitItem*(pagination.currentPage - 1) + index + 1}
                 td 
                   img(
                     src = item.thumbnail
@@ -87,4 +87,4 @@ block main
                     data-id=item.id
                   ) Xóa
   
-  //- +pagination()
+  +pagination()
