--- a/views/admin/pages/accounts/index.pug
+++ b/views/admin/pages/accounts/index.pug
@@ -43,22 +43,15 @@ block main
                 td #{pagination.limitItem*(pagination.currentPage - 1) + index + 1}
                 td 
                   img(
-                    src = item.thumbnail
-                    alt=item.title
+                    src = item.avatar
+                    alt= "Avatar"
                     width="100px"
                     height="100px"
                     style="object-fit: cover"
                   )
-                td #{item.title}
-                td #{item.price}
-                td 
-                  input(
-                    type="number"
-                    value=item.position
-                    style="width: 60px"
-                    min=1
-                    name="position"
-                  )
+                td #{item.fullName}
+                td #{item.role.title}
+                td #{item.email}
                 td
                   if(item.status == "active")
                     a(href="javascript:;"
@@ -74,11 +67,11 @@ block main
                     class="badge bg-warning") Dừng hoạt động
                 td 
                   a(
-                      href=`${prefixAdmin}/products/detail/${item.id}`
+                      href=`${prefixAdmin}/accounts/detail/${item.id}`
                       class="btn btn-secondary btn-sm"
                       ) Chi tiết
                   a(
-                    href=`${prefixAdmin}/products/edit/${item.id}`
+                    href=`${prefixAdmin}/accounts/edit/${item.id}`
                     class="btn btn-warning btn-sm"
                     ) Sửa 
                   button(
