--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -1,8 +1,13 @@
 header.header
   .container-fluid 
     .row.align-item-center 
-      .col-3 
+      .col-10
         .inner-logo 
           a(href=`${prefixAdmin}/dashboard`) ADMIN
 
-      .col-9
+      .col-2
+        div(class="text-right")
+          a(
+            href=`${prefixAdmin}/auth/logout`
+            class="btn btn-sm btn-danger"
+          ) Đăng xuất
