add file auth.middleware

--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -6,7 +6,7 @@ header.header
           a(href=`${prefixAdmin}/dashboard`) ADMIN
 
       .col-2
-        div(styles="text-align: right")
+        div(class="text-end")
           a(
             href=`${prefixAdmin}/auth/logout`
             class="btn btn-sm btn-danger"
