--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -4,16 +4,19 @@ html
     title #{pageTitle}
     link(rel="stylesheet", href="/admin/css/styles.css")
     link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css")
-  body 
-    include ../partials/header.pug
+  body
+    if(role.permissions.length > 0)
+      include ../partials/header.pug
 
-    .body
-      include ../partials/sider.pug
+      .body
+        include ../partials/sider.pug
 
-      .main
-        block main
+        .main
+          block main
 
-    include ../partials/footer.pug
+      include ../partials/footer.pug
+    else 
+      h1 Bạn không có quyền truy cập
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
