--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -106,6 +106,30 @@ block main
           each item in records
             td(class="text-center")
               input(type="checkbox")
+        
+        tr 
+          td(colspan="4")
+            b Tài khoản
+        tr(data-name="accounts_view")
+          td Xem 
+          each item in records
+            td(class="text-center")
+              input(type="checkbox")
+        tr(data-name="accounts_create")
+          td Thêm mới
+          each item in records
+            td(class="text-center")
+              input(type="checkbox")
+        tr(data-name="accounts_edit")
+          td Chỉnh sửa
+          each item in records
+            td(class="text-center")
+              input(type="checkbox")
+        tr(data-name="accounts_delete")
+          td Xóa
+          each item in records
+            td(class="text-center")
+              input(type="checkbox")
   form(
     id="form-change-permissions"
     method="post"
