--- a/views/admin/pages/product-category/index.pug
+++ b/views/admin/pages/product-category/index.pug
@@ -10,36 +10,39 @@ include ../../mixins/table-tree.pug
 block main
   +alert-suceess(5000)
 
-  h1(class="test") Danh mục sản phẩm
+  if(role.permissions.includes("products-category_view"))
 
-  .card.mb-1 
-    .card-header Danh mục
-      .card-body 
-        .row 
-          .col-8
-            +form-change-multi(`${prefixAdmin}/products-category/change-multi?_method=PATCH`)
-          .col-4
-            a(
-              href=`${prefixAdmin}/products-category/create` 
-              class="btn btn-outline-success"
-            ) + Thêm mới
+    h1(class="test") Danh mục sản phẩm
 
-        table(
-          class="table table-hover table-sm mt-4" 
-          checkbox-multi
-        )  
-          thead
-            tr  
-              th 
-                input(type="checkbox" name="checkall")
-              th STT 
-              th Hình ảnh 
-              th Tiêu đề
-              th Giá
-              th Vị trí
-              th Trạng thái
-              th Hành động
-          
-          tbody 
-            +table-tree(records)
+    .card.mb-1 
+      .card-header Danh mục
+        .card-body 
+          .row 
+            .col-8
+              +form-change-multi(`${prefixAdmin}/products-category/change-multi?_method=PATCH`)
+            .col-4
+              if(role.permissions.includes("products-category_create"))
+                a(
+                  href=`${prefixAdmin}/products-category/create` 
+                  class="btn btn-outline-success"
+                ) + Thêm mới
+
+          table(
+            class="table table-hover table-sm mt-4" 
+            checkbox-multi
+          )  
+            thead
+              tr  
+                th 
+                  input(type="checkbox" name="checkall")
+                th STT 
+                th Hình ảnh 
+                th Tiêu đề
+                th Giá
+                th Vị trí
+                th Trạng thái
+                th Hành động
             
+            tbody 
+              +table-tree(records)
+              
