--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -77,6 +77,11 @@ block main
           each item in records
             td(class="text-center")
               input(type="checkbox")
+        tr(data-name="products_bin")
+          td Thùng rác
+          each item in records
+            td(class="text-center")
+              input(type="checkbox")
         
         tr 
           td(colspan="4")
