--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -12,7 +12,7 @@
           if(role.permissions.includes("products_view"))
             li.nav-item
               a.nav-link(href=`${prefixAdmin}/products`) Sản phẩm
-          if(role.permissions.includes("products_view"))
+          if(role.permissions.includes("products_bin"))
             li.nav-item
               a.nav-link(href=`${prefixAdmin}/products/bin`) Thùng rác
           if(role.permissions.includes("roles_view"))
