--- a/views/admin/pages/accounts/index.pug
+++ b/views/admin/pages/accounts/index.pug
@@ -2,82 +2,86 @@ extends ../../layouts/default.pug
 include ../../mixins/pagination.pug
 
 block main
-  h1(class="test") Danh sách tài khoản
+  if(role.permissions.includes("accounts_view"))
+    h1(class="test") Danh sách tài khoản
 
-  .card.mb-1 
-    .card-header Danh sách
-      .card-body 
-        .row 
-          .col-8
-          .col-4
-            a(
-              href=`${prefixAdmin}/accounts/create` 
-              class="btn btn-outline-success"
-            ) + Thêm mới
-        
-        table(
-          class="table table-hover table-sm mt-4" 
-          checkbox-multi
-        )  
-          thead
-            tr  
-              th 
-                input(type="checkbox" name="checkall")
-              th STT 
-              th Avatar
-              th Họ tên
-              th Phân quyền
-              th Email
-              th Trạng thái
-              th Hành động
+    .card.mb-1 
+      .card-header Danh sách
+        .card-body 
+          .row 
+            .col-8
+            .col-4
+              if(role.permissions.includes("accounts_create"))
+                a(
+                  href=`${prefixAdmin}/accounts/create` 
+                  class="btn btn-outline-success"
+                ) + Thêm mới
           
-          tbody 
-            each item, index in records
-              tr(class="tr") 
-                td 
-                  input(
-                    type="checkbox"
-                    name="id"
-                    value=item.id
-                  )
-                td #{pagination.limitItem*(pagination.currentPage - 1) + index + 1}
-                td 
-                  img(
-                    src = item.avatar
-                    alt= "Avatar"
-                    width="100px"
-                    height="100px"
-                    style="object-fit: cover"
-                  )
-                td #{item.fullName}
-                td #{item.role.title}
-                td #{item.email}
-                td
-                  if(item.status == "active")
-                    a(href="javascript:;"
-                    data-status=item.status
-                    data-id=item.id
-                    button-change-status
-                     class="badge bg-success") Hoạt động
-                  else 
-                    a(href="javascript:;"
-                    data-status=item.status
-                    data-id=item.id
-                    button-change-status 
-                    class="badge bg-warning") Dừng hoạt động
-                td 
-                  a(
-                      href=`${prefixAdmin}/accounts/detail/${item.id}`
-                      class="btn btn-secondary btn-sm"
-                      ) Chi tiết
-                  a(
-                    href=`${prefixAdmin}/accounts/edit/${item.id}`
-                    class="btn btn-warning btn-sm"
-                    ) Sửa 
-                  button(
-                    class="btn btn-danger btn-sm ms-1" 
-                    button-delete 
-                    data-id=item.id
-                  ) Xóa
-  
-  +pagination()
+          table(
+            class="table table-hover table-sm mt-4" 
+            checkbox-multi
+          )  
+            thead
+              tr  
+                th 
+                  input(type="checkbox" name="checkall")
+                th STT 
+                th Avatar
+                th Họ tên
+                th Phân quyền
+                th Email
+                th Trạng thái
+                th Hành động
+            
+            tbody 
+              each item, index in records
+                tr(class="tr") 
+                  td 
+                    input(
+                      type="checkbox"
+                      name="id"
+                      value=item.id
+                    )
+                  td #{pagination.limitItem*(pagination.currentPage - 1) + index + 1}
+                  td 
+                    img(
+                      src = item.avatar
+                      alt= "Avatar"
+                      width="100px"
+                      height="100px"
+                      style="object-fit: cover"
+                    )
+                  td #{item.fullName}
+                  td #{item.role.title}
+                  td #{item.email}
+                  td
+                    if(item.status == "active")
+                      a(href="javascript:;"
+                      data-status=item.status
+                      data-id=item.id
+                      button-change-status
+                      class="badge bg-success") Hoạt động
+                    else 
+                      a(href="javascript:;"
+                      data-status=item.status
+                      data-id=item.id
+                      button-change-status 
+                      class="badge bg-warning") Dừng hoạt động
+                  td 
+                    a(
+                        href=`${prefixAdmin}/accounts/detail/${item.id}`
+                        class="btn btn-secondary btn-sm"
+                        ) Chi tiết
+                    if(role.permissions.includes("accounts_edit"))
+                      a(
+                        href=`${prefixAdmin}/accounts/edit/${item.id}`
+                        class="btn btn-warning btn-sm ms-2"
+                        ) Sửa
+                    if(role.permissions.includes("accounts_delete"))
+                      button(
+                        class="btn btn-danger btn-sm ms-2" 
+                        button-delete 
+                        data-id=item.id
+                      ) Xóa
+    
+    +pagination()
