--- a/views/admin/pages/role/create.pug
+++ b/views/admin/pages/role/create.pug
@@ -7,37 +7,38 @@ include ../../mixins/alert.pug
 include ../../mixins/sort.pug
 
 block main
-  +alert-suceess(5000)
-  
-  h1(class="mb-4") Thêm nhóm quyền mới
-
-  form(
-    action=`${prefixAdmin}/roles/create`
-    method="POST"
-  )
-
-    div(class="form-group")
-      label(for="title") Tiêu đề
-      input(
-        type="text"
-        class="form-control"
-        id="title"
-        name="title"
-        required
-      )
+  if(role.permissions.includes("roles_create"))
+    +alert-suceess(5000)
     
-    div(class="form-group")
-      label(for="desc") Mô tả
-      input(
-        type="text"
-        class="form-control textarea-mce"
-        id="desc"
-        name="description"
-      )
-    
-    div(class="form-group")
-      button(
-        type="submit"
-        class="btn btn-primary mt-3"
-      ) Tạo mới
+    h1(class="mb-4") Thêm nhóm quyền mới
+
+    form(
+      action=`${prefixAdmin}/roles/create`
+      method="POST"
+    )
+
+      div(class="form-group")
+        label(for="title") Tiêu đề
+        input(
+          type="text"
+          class="form-control"
+          id="title"
+          name="title"
+          required
+        )
+      
+      div(class="form-group")
+        label(for="desc") Mô tả
+        input(
+          type="text"
+          class="form-control textarea-mce"
+          id="desc"
+          name="description"
+        )
+      
+      div(class="form-group")
+        button(
+          type="submit"
+          class="btn btn-primary mt-3"
+        ) Tạo mới
 
