--- a/views/admin/pages/role/index.pug
+++ b/views/admin/pages/role/index.pug
@@ -7,67 +7,71 @@ include ../../mixins/alert.pug
 include ../../mixins/sort.pug
 
 block main
-  +alert-suceess(5000)
-  
-  h1(class="mb-4") Nhóm quyền
+  if(role.permissions.includes("roles_view"))
+    +alert-suceess(5000)
+    
+    h1(class="mb-4") Nhóm quyền
 
-  .card.mb-3 
-    .card-header Danh sách
-      .card-body 
-        .row 
-          .col-8
-          .col-4
-            a(
-              href=`${prefixAdmin}/roles/create` 
-              class="btn btn-outline-success"
-            ) + Thêm mới
-        
-        table(
-          class="table table-hover table-sm mt-4" 
-          checkbox-multi
-        )  
-          thead
-            tr  
-              th STT 
-              th Nhóm quyền
-              th Mô tả 
-              th Trạng thái
-              th Hành động
+    .card.mb-3 
+      .card-header Danh sách
+        .card-body 
+          .row 
+            .col-8
+            .col-4
+              if(role.permissions.includes("roles_create"))
+                a(
+                  href=`${prefixAdmin}/roles/create` 
+                  class="btn btn-outline-success"
+                ) + Thêm mới
+          
+          table(
+            class="table table-hover table-sm mt-4" 
+            checkbox-multi
+          )  
+            thead
+              tr  
+                th STT 
+                th Nhóm quyền
+                th Mô tả 
+                th Trạng thái
+                th Hành động
 
-          tbody 
-            if(records.length > 0)
-              each item, index in records
-                tr(class="tr") 
-                  td #{index+1} 
-                  td #{item.title}
-                  td #{item.description}
-                  td
-                    if(item.status == "active")
-                      a(href="javascript:;"
-                      data-status=item.status
-                      data-id=item.id
-                      button-change-status
-                      class="badge bg-success") Hoạt động
-                    else 
-                      a(href="javascript:;"
-                      data-status=item.status
-                      data-id=item.id
-                      button-change-status 
-                      class="badge bg-warning") Dừng hoạt động
-                  td 
-                    a(
-                        href=`${prefixAdmin}/roles/detail/${item.id}`
-                        class="btn btn-secondary btn-sm"
-                        ) Chi tiết
-                    a(
-                      href=`${prefixAdmin}/roles/edit/${item.id}`
-                      class="btn btn-warning btn-sm"
-                      ) Sửa 
-                    button(
-                      class="btn btn-danger btn-sm ms-1" 
-                      button-delete 
-                      data-id=item.id
-                    ) Xóa
-            else 
-              tr 
-                td(colspan="4" class="text-center") Chưa có nhóm quyền nào được tạo
+            tbody 
+              if(records.length > 0)
+                each item, index in records
+                  tr(class="tr") 
+                    td #{index+1} 
+                    td #{item.title}
+                    td #{item.description}
+                    td
+                      if(item.status == "active")
+                        a(href="javascript:;"
+                        data-status=item.status
+                        data-id=item.id
+                        button-change-status
+                        class="badge bg-success") Hoạt động
+                      else 
+                        a(href="javascript:;"
+                        data-status=item.status
+                        data-id=item.id
+                        button-change-status 
+                        class="badge bg-warning") Dừng hoạt động
+                    td
+                      a(
+                          href=`${prefixAdmin}/roles/detail/${item.id}`
+                          class="btn btn-secondary btn-sm"
+                          ) Chi tiết
+                      if(role.permissions.includes("roles_edit"))
+                        a(
+                          href=`${prefixAdmin}/roles/edit/${item.id}`
+                          class="btn btn-warning btn-sm ms-2"
+                          ) Sửa
+                      if(role.permissions.includes("roles_delete"))
+                        button(
+                          class="btn btn-danger btn-sm ms-2" 
+                          button-delete 
+                          data-id=item.id
+                        ) Xóa
+              else 
+                tr 
+                  td(colspan="4" class="text-center") Chưa có nhóm quyền nào được tạo
