--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -58,6 +58,7 @@ block main
                 th Vị trí
                 th Trạng thái
                 th Người tạo
+                th Người sửa
                 th Hành động
             
             tbody 
@@ -103,6 +104,9 @@ block main
                       class="badge bg-warning") Dừng hoạt động
                   td 
                     p #{item.accountFullName}
+                    +formatDateTime(item.createdBy.createdAt)
+                  td 
+                    p #{item.updatedByUser}
                     +formatDateTime(item.createdBy.createdAt)
                   td 
                     a(
