--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -6,12 +6,23 @@ header.header
           a(href=`${prefixAdmin}/dashboard`) ADMIN
 
       .col-2
-        div(class="text-end")
-          a(
-            href=`${prefixAdmin}/my-account`
-            class="btn btn-sm btn-danger ms-2"
+        div(class="btn-group ms-5")
+          button(class="btn btn-primary dropdown-toggle" 
+            href="#" id="dropdownMenuLink" 
+            aria-expanded="false"
+            data-bs-toggle="dropdown"
           ) #{user.fullName}
-          a(
-            href=`${prefixAdmin}/auth/logout`
-            class="btn btn-sm btn-danger"
-          ) Đăng xuất
+
+          ul(class="dropdown-menu")
+            li
+              a(
+                href=`${prefixAdmin}/my-account`
+                class="btn btn-sm dropdown-item"
+              ) <b>Thông tin cá nhân</b>
+            li
+              <hr class="dropdown-divider">
+            li
+              a(
+                href=`${prefixAdmin}/auth/logout`
+                class="btn btn-sm dropdown-item btn-dangXuat"
+              ) <b>Đăng xuất</b>
