--- a/public/admin/css/styles.css
+++ b/public/admin/css/styles.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .header {
   background-color: black;
   padding: 10px 0;
@@ -117,4 +121,8 @@
 
 .btn-dangXuat:hover {
   color: red !important;
+}
+
+.card {
+  width: 1110px;
 }
