--- a/views/admin/pages/product-category/index.pug
+++ b/views/admin/pages/product-category/index.pug
@@ -28,7 +28,7 @@ block main
                 ) + Thêm mới
 
           table(
-            class="table table-hover table-sm mt-4" 
+            class="table table-hover table-sm mt-4 w-1300"
             checkbox-multi
           )  
             thead
