--- a/views/admin/pages/role/edit.pug
+++ b/views/admin/pages/role/edit.pug
@@ -7,7 +7,7 @@ include ../../mixins/alert.pug
 include ../../mixins/sort.pug
 
 block main
-  +alert-suceess(5000)
+  +alert-success(5000)
   
   h1(class="mb-4") Chỉnh sửa quyền mới
 
