--- a/views/admin/pages/product-category/index.pug
+++ b/views/admin/pages/product-category/index.pug
@@ -8,7 +8,7 @@ include ../../mixins/sort.pug
 include ../../mixins/table-tree.pug
 
 block main
-  +alert-suceess(5000)
+  +alert-success(5000)
 
   if(role.permissions.includes("products-category_view"))
 
