--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -9,7 +9,7 @@ include ../../mixins/moment.pug
 
 block main
   if(role.permissions.includes("products_view"))
-    +alert-suceess(5000)
+    +alert-success(5000)
 
     h1(class="test") Danh sách sản phẩm
 
