--- a/views/admin/pages/role/create.pug
+++ b/views/admin/pages/role/create.pug
@@ -8,7 +8,7 @@ include ../../mixins/sort.pug
 
 block main
   if(role.permissions.includes("roles_create"))
-    +alert-suceess(5000)
+    +alert-success(5000)
     
     h1(class="mb-4") Thêm nhóm quyền mới
 
