--- a/views/admin/pages/role/permissions.pug
+++ b/views/admin/pages/role/permissions.pug
@@ -3,7 +3,7 @@ include ../../mixins/alert.pug
 
 block main
   if(role.permissions.includes("products_bin"))
-    +alert-suceess(5000)
+    +alert-success(5000)
     
     h1(class="mb-4") Phân quyền
 
@@ -15,140 +15,140 @@ block main
           class="btn btn-primary mb-3"
           button-submit
         ) Cập nhật
-      
-      table(
-        class="table table-hover table-sm"
-        table-permissions
-      )
-        thead 
-          tr  
-            th Tính năng 
-            each item in records
-              th(class="text-center") #{item.title}
-        tbody 
-          tr(data-name="id" class="d-none")
-            td 
-            each item in records 
-              td(class="text-center")
-                input(type="text" value=item.id)
-          tr 
-            td(colspan="4")
-              b Danh mục sản phẩm 
-          tr(data-name="products-category_view")
-            td Xem 
-            each item in records
-              td(class="text-center")
-                input(type="checkbox")
-          tr(data-name="products-category_create")
-            td Thêm mới
-            each item in records
-              td(class="text-center")
-                input(type="checkbox")
-          tr(data-name="products-category_edit")
-            td Chỉnh sửa
-            each item in records
-              td(class="text-center")
-                input(type="checkbox")
-          tr(data-name="products-category_delete")
-            td Xóa
-            each item in records
-              td(class="text-center")
-                input(type="checkbox")
-          
-          tr 
-            td(colspan="4")
-              b Sản phẩm
-          tr(data-name="products_view")
-            td Xem 
-            each item in records
-              td(class="text-center")
-                input(type="checkbox")
-          tr(data-name="products_create")
-            td Thêm mới
-            each item in records
-              td(class="text-center")
-                input(type="checkbox")
-          tr(data-name="products_edit")
-            td Chỉnh sửa
-            each item in records
-              td(class="text-center")
-                input(type="checkbox")
-          tr(data-name="products_delete")
-            td Xóa
-            each item in records
-              td(class="text-center")
-                input(type="checkbox")
-          tr(data-name="products_bin")
-            td Thùng rác
-            each item in records
-              td(class="text-center")
-                input(type="checkbox")
-          
-          tr 
-            td(colspan="4")
-              b Nhóm quyền
-          tr(data-name="roles_view")
-            td Xem 
-            each item in records
-              td(class="text-center")
-                input(type="checkbox")
-          tr(data-name="roles_create")
-            td Thêm mới
-            each item in records
-              td(class="text-center")
-                input(type="checkbox")
-          tr(data-name="roles_edit")
-            td Chỉnh sửa
-            each item in records
-              td(class="text-center")
-                input(type="checkbox")
-          tr(data-name="roles_delete")
-            td Xóa
-            each item in records
-              td(class="text-center")
-                input(type="checkbox")
-          tr(data-name="roles_permissions")
-            td Phân quyền
-            each item in records
-              td(class="text-center")
-                input(type="checkbox")
-          
-          tr 
-            td(colspan="4")
-              b Tài khoản
-          tr(data-name="accounts_view")
-            td Xem 
-            each item in records
-              td(class="text-center")
-                input(type="checkbox")
-          tr(data-name="accounts_create")
-            td Thêm mới
-            each item in records
-              td(class="text-center")
-                input(type="checkbox")
-          tr(data-name="accounts_edit")
-            td Chỉnh sửa
-            each item in records
-              td(class="text-center")
-                input(type="checkbox")
-          tr(data-name="accounts_delete")
-            td Xóa
-            each item in records
-              td(class="text-center")
-                input(type="checkbox")
-    form(
-      id="form-change-permissions"
-      method="post"
-      action=`${prefixAdmin}/roles/permissions?_method=PATCH`
-      class="d-none"
-    )
-      div(class="form-group")
-        input(
-          type="text"
-          class="form-control"
-          name="permissions"
+      .w-1100
+        table(
+          class="table table-hover table-sm"
+          table-permissions
         )
-    
+          thead 
+            tr  
+              th Tính năng 
+              each item in records
+                th(class="text-center") #{item.title}
+          tbody 
+            tr(data-name="id" class="d-none")
+              td 
+              each item in records 
+                td(class="text-center")
+                  input(type="text" value=item.id)
+            tr 
+              td(colspan="4")
+                b Danh mục sản phẩm 
+            tr(data-name="products-category_view")
+              td Xem 
+              each item in records
+                td(class="text-center")
+                  input(type="checkbox")
+            tr(data-name="products-category_create")
+              td Thêm mới
+              each item in records
+                td(class="text-center")
+                  input(type="checkbox")
+            tr(data-name="products-category_edit")
+              td Chỉnh sửa
+              each item in records
+                td(class="text-center")
+                  input(type="checkbox")
+            tr(data-name="products-category_delete")
+              td Xóa
+              each item in records
+                td(class="text-center")
+                  input(type="checkbox")
+            
+            tr 
+              td(colspan="4")
+                b Sản phẩm
+            tr(data-name="products_view")
+              td Xem 
+              each item in records
+                td(class="text-center")
+                  input(type="checkbox")
+            tr(data-name="products_create")
+              td Thêm mới
+              each item in records
+                td(class="text-center")
+                  input(type="checkbox")
+            tr(data-name="products_edit")
+              td Chỉnh sửa
+              each item in records
+                td(class="text-center")
+                  input(type="checkbox")
+            tr(data-name="products_delete")
+              td Xóa
+              each item in records
+                td(class="text-center")
+                  input(type="checkbox")
+            tr(data-name="products_bin")
+              td Thùng rác
+              each item in records
+                td(class="text-center")
+                  input(type="checkbox")
+            
+            tr 
+              td(colspan="4")
+                b Nhóm quyền
+            tr(data-name="roles_view")
+              td Xem 
+              each item in records
+                td(class="text-center")
+                  input(type="checkbox")
+            tr(data-name="roles_create")
+              td Thêm mới
+              each item in records
+                td(class="text-center")
+                  input(type="checkbox")
+            tr(data-name="roles_edit")
+              td Chỉnh sửa
+              each item in records
+                td(class="text-center")
+                  input(type="checkbox")
+            tr(data-name="roles_delete")
+              td Xóa
+              each item in records
+                td(class="text-center")
+                  input(type="checkbox")
+            tr(data-name="roles_permissions")
+              td Phân quyền
+              each item in records
+                td(class="text-center")
+                  input(type="checkbox")
+            
+            tr 
+              td(colspan="4")
+                b Tài khoản
+            tr(data-name="accounts_view")
+              td Xem 
+              each item in records
+                td(class="text-center")
+                  input(type="checkbox")
+            tr(data-name="accounts_create")
+              td Thêm mới
+              each item in records
+                td(class="text-center")
+                  input(type="checkbox")
+            tr(data-name="accounts_edit")
+              td Chỉnh sửa
+              each item in records
+                td(class="text-center")
+                  input(type="checkbox")
+            tr(data-name="accounts_delete")
+              td Xóa
+              each item in records
+                td(class="text-center")
+                  input(type="checkbox")
+      form(
+        id="form-change-permissions"
+        method="post"
+        action=`${prefixAdmin}/roles/permissions?_method=PATCH`
+        class="d-none"
+      )
+        div(class="form-group")
+          input(
+            type="text"
+            class="form-control"
+            name="permissions"
+          )
+      
     script(src="/admin/js/roles.js")
 
 
