--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -8,8 +8,21 @@ header.header
       
       .col-9
         .inner-menu
-          ul 
+          ul(class="flex")
             li
               a(href="/") Trang chủ
-            li 
-              a(href="/products") Sản phẩm 
+            li(class="sub-menu")
+              a(href="/products" ) Sản phẩm 
+              ul 
+                li 
+                  a(href="/product/slug1") Mục 1
+                  ul 
+                    li 
+                      a(href="/product/slug1-1") Mục 1-1
+                    li 
+                      a(href="/product/slug1-2") Mục 1-2
+                      ul 
+                        li 
+                          a(href="/product/slug1-1") Mục 1-2-1
+                        li 
+                          a(href="/product/slug1-2") Mục 1-2-2
