--- a/views/admin/pages/products/edit.pug
+++ b/views/admin/pages/products/edit.pug
@@ -27,7 +27,7 @@ block main
       div(class="form-group")
       label(for="product_category_id") Danh mục
       select(
-        name=categoryName.title
+        name="product_category_id"
         id="product_category_id"
         class="form-control"
       ) 
@@ -35,6 +35,29 @@ block main
           if(category)
             +select-tree(category)
       
+      input(name=data.title class="" id="product_category_id1")
+
+      div(class="form-group form-check form-check-inline mt-3")
+        input(
+          type="radio"
+          class="form-check-input"
+          id="featured1"
+          name="featured"
+          value="1"
+          checked = (product.featured=="1" ?true :false)
+        ) 
+        label(for="featured1" class="form-check-label") Nổi bật
+      div(class="form-group form-check form-check-inline")
+        input(
+          type="radio"
+          class="form-check-input"
+          id="featured2"
+          name="featured"
+          value="0"
+          checked = (product.featured=="0" ?true :false)
+        ) 
+        label(for="featured1" class="form-check-label") Không
+
       div(class="form-group")
         label(for="desc") Mô tả
         textarea(
