--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -6,7 +6,6 @@ block main
   if(role.permissions.includes("products_create"))
     +alert-error(5000)
     h1(class="mb-4") Thêm mới sản phẩm
-
     form(
       action=`${prefixAdmin}/products/create`
       enctype="multipart/form-data"
@@ -34,7 +33,26 @@ block main
           if(category)
             +select-tree(category)
       
-      
+      div(class="form-group form-check form-check-inline mt-3")
+        input(
+          type="radio"
+          class="form-check-input"
+          id="featured1"
+          name="featured"
+          value="1"
+        ) 
+        label(for="featured1" class="form-check-label") Nổi bật
+      div(class="form-group form-check form-check-inline")
+        input(
+          type="radio"
+          class="form-check-input"
+          id="featured2"
+          name="featured"
+          value="0"
+          checked
+        ) 
+        label(for="featured1" class="form-check-label") Không
+
       div(class="form-group")
         label(for="desc") Mô tả
         textarea(
