--- a/views/admin/pages/products/edit.pug
+++ b/views/admin/pages/products/edit.pug
@@ -35,7 +35,7 @@ block main
           if(category)
             +select-tree(category)
       
-      input(name=data.title class="" id="product_category_id1")
+      input(name=categoryName.title class="d-none" id="product_category_id1")
 
       div(class="form-group form-check form-check-inline mt-3")
         input(
