--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -1,6 +1,23 @@
 extends ../../layouts/default.pug
+include ../../mixins/box-head.pug
 
 block main
-  h1(class="test") Trang chủ
-  
-  #{layoutProductsCategory}
+
+  .container 
+    .row
+      .col-12 
+        .box-head
+          +box-head("Sản phẩm nổi bật")
+    
+    .row 
+      each item in producsFeatured
+        .col-3.mb-3 
+          .product-item 
+            .inner-image 
+              img(src=`${item.thumbnail}`)
+            div(class="all-content")
+              h4.inner-title 
+                a(href=`/products/${item.slug}`) #{item.title}
+              .inner-price-new <b>#{item.priceNew}$</b>
+              .inner-price-old <b>#{item.price}$</b>
+              .inner-discount.badge.bg-danger -#{item.discountPercentage}%
