--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -10,3 +10,11 @@ block main
           +box-head("Danh sách sản phẩm")
     
     +product-grid(products)
+
+    .container 
+    .row
+      .col-12 
+        .box-head
+          +box-head("Danh sách mới")
+    
+    +product-grid(productsNew)
