--- a/views/client/mixins/product-item.pug
+++ b/views/client/mixins/product-item.pug
@@ -3,6 +3,8 @@ mixin product-item(item)
           .product-item 
             .inner-image 
               img(src=`${item.thumbnail}`)
+            if(item.featured == "1")
+              .inner-featured Nổi bật
             div(class="all-content")
               h4.inner-title 
                 a(href=`/products/${item.slug}`) #{item.title}
