--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -11,3 +11,11 @@ block main
           +box-head("Sản phẩm nổi bật")
     
     +product-grid(producsFeatured)
+
+  .container 
+    .row
+      .col-12 
+        .box-head
+          +box-head("Danh sách mới")
+    
+    +product-grid(productsNew)
